<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AXIS 18</string>
    <string name="axis">AXIS</string>
    <string name="vnit">VNIT</string>
    <string name="guest">guest@axisvnit.org</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="eve_det">Event Details</string>
    <string name="eve_man">Event Managers</string>
    <string name="apj">Honorable Ex-President of India Dr. APJ Kalam inaugurating Axis-14 at VNIT Nagpur</string>
    <string name="login_signup_txt1">To register for the event please login or signup</string>
    <string name="abt_axis">AXIS is the annual technical festival of the Visvesvaraya National Institute of Technology, Nagpur.
        Traditionally held in the month of September or early October, AXIS has grown to become one of the largest
        technical festivals in India and the largest in Central India.\n\n With a plethora of events encompassing a wide variety of fields like Automation and Robotics, Construction and Design, Software and Electronics, Management, School Events and many more, AXIS attracts some of the brightest and most creative young minds from all over India. Featuring some big names like NDRF and DRDO, AXIS Exhibitions are an excellent source of erudition. Various workshops are also organized every year, under expert guidance, to keep students up to date with latest technology.\n\nStarted in 2004 after merging
        two traditionally held festivals - the IEEE Expressions and Odyssey, AXIS has come a long way from its modest beginnings
        and annually attracts over 25,000 school and college students from different parts of the country.\n</string>
    <string name="inaug">The most awaited inaugural addresses of AXIS have been delivered by some of the most distinguished
                personalities in the field of science and technology. Known for being interactive, inspiring and instigating,
                they provide students an opportunity to closely interact with their role models.\n\n
                AXIS\'14 received the most auspicious inauguration by Dr. APJ Abdul Kalam (late Former President of India and founder
                of India\'s missile program) Dr. Kalam\'s motivating oration was aimed at moulding the leaders of tomorrow, and his unforgettable
                words - \"I will fly, I will fly, I will fly\" remain etched in the memories of every person present in the audience on that
                memorable day.\n\n AXIS\'15 saw Dr. Dinesh Keskar(VNIT Alumnus and Senior Vice President, Boeing Commercial Airplanes) revisit his
                alma mater to inaugurate its technical festival which has grown in leaps and bounds since his time. As an engineer himself,
                Dr. Keskar delivered an extremely relatable depiction of his journey from a VNIT graduate to working under Neil Armstrong,
                and instilled in the audience a sense of purpose and a firm belief that they have it in themselves to scale the pinnacles of success."
    </string>
    <string name="abt_vnit">Visvesvaraya National Institute of Technology, Nagpur (abbreviated VNIT Nagpur), also referred to as NIT Nagpur,
        formerly Regional College of Engineering, Nagpur (REC) and Visvesvaraya Regional College of Engineering, Nagpur (VRCE),
        is a premier public engineering and research institution in India. It is located in Nagpur, Maharashtra, in central India.
        The institute has been consistently ranked among the best fifteen engineering colleges in India.It was established in June 1960 +
        by the Government of India and later named in honor of engineer, planner and statesman, Sir Mokshagundam Visvesvaraya.
        \n\nVNIT Nagpur is federally-funded and belongs to the National Institutes of Technology (NIT) system. In 2007, the institute was
        conferred the status of Institute of National Importance (INI) alongside other NITs and IITs by an Act of Parliament of India.
        The institute awards bachelors, masters and doctoral degrees in engineering, technology and architecture.\n\n
    </string>
    <string name="ethical">AXIS, VNIT Nagpur conducted a full day workshop on Ethical Hacking and Cyber Security on 5th November 2017.
        The workshop was conducted by Mahesh Rakheja, technical public speaker from Nagpur. Mahesh Rakheja is the President and Co-founder of
        Google Developer Group, Nagpur. He has worked with various law enforcement departments of Turkey, Indian Army, State Intelligence and
        Police Department and has trained students in India, Germany, Australia, Angola, Nigeria, Turkey,etc..
        The students learned about Cyber Ethics, Information Gathering and Scanning Methodologies, Trojans, Backdoors, Google Hacking, Wireless
        Hacking and Security, System and Network Hacking, Email Hacking and Security,etc.. Many students as well as professionals participated in the workshop.
    </string>
    <string name="nav_home">Home</string>
    <string name="nav_attractions">Attractions</string>
    <string name="nav_events">Events</string>
    <string name="nav_workshops">Workshops</string>
    <string name="nav_social_initiatives">Social Initiatives</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_map">Map</string>
    <string name="nav_sponsors">Sponsors</string>
    <string name="nav_developers">Developers</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="team">Team</string>
    <string name="title_activity_maps">Map</string>
    <string name="AIzaSyCaSHMOo6OmcMtm4WXndEsYolPni555yJ8">google_maps_key</string>
    <string name="events">Events</string>
    <string name="workshops">Workshops</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="nav_about">About</string>
    <string name="nav_going_to">Going to</string>
    <string name="nav_ws_exhib">Workshops and Exhibitions</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Signup</string>
    <string name="category">Category</string>
    <string name="coll_event">COLL-IN-COLL</string>
    <string name="coll1">MAYUR</string>
    <string name="coll1num"><b><u>+91-8055155345</u></b></string>
    <string name="coll2">SIDDHARTHA</string>
    <string name="coll2num"><b><u>+91-7767049792</u></b></string>
    <string name="coll3">SANKET</string>
    <string name="coll3num"><b><u>+91-7387311052</u></b></string>
    <string name="coll4">SOWMYA</string>
    <string name="coll4num"><b><u>+91-9049568241</u></b></string>
    <string name="coll_det">
        Bag lucrative industry internships/projects with some of the biggest names in engineering by
        coming up with creative solutions to the problem statements presented, and gain an insight into how things work in the industrial world.
    </string>
    <string name="kart_event">KARTAVYA</string>
    <string name="kart1">KAMIL</string>
    <string name="kart1num"><b><u>+91-9158811213</u></b></string>
    <string name="kart2">ANUSHA</string>
    <string name="kart2num"><b><u>+91-9177985424</u></b></string>
    <string name="kart3">ANKIT</string>
    <string name="kart3num"><b><u>+91-8554858450</u></b></string>
    <string name="title_activity_kartavya">Kartavya</string>
    <string name="kart_det">
        The world today is in need of compassion.There are too many people whose problems
        go unheard, too many who don’t get enough opportunities to live the life they
        deserve.This needs to change.As an educated young mind of the nation, be the driver of
        this change and contribute to the greater good.Address the challenges faced by the
        world today with your creative ideas and strengthen our sense of shared humanity and
        bring a light to other’s lives!
        This event brings to you real world problems in the form of problem statements.Think
        out of the box and make this world a better place for you,me and the entire human race!
    </string>
    <string name="aquahunt_event">AQUAHUNT</string>
    <string name="aqua1">AMEY</string>
    <string name="aqua1num"><b><u>+91-8879710910</u></b></string>
    <string name="aqua2">SHUBHAM</string>
    <string name="aqua2num"><b><u>+91-9637328065</u></b> </string>
    <string name="aqua3">PRITAM</string>
    <string name="aqua3num"><b><u>+91-7038232710</u></b></string>
    <string name="aqua_det">
        Show off your robotics skills in this water robotics event! Challenge yourself and build an
        aquatic robot that can operate underwater. Manoeuvre your robot as it completes
        complicated tasks in this unique aquatic tournament.
    </string>
    <string name="techno_docx_event">TECHNODOCX</string>
    <string name="techno1">ANUDEEP</string>
    <string name="techno1num"><b><u>+91-9420713836</u></b></string>
    <string name="techno2">SAHITHI</string>
    <string name="techno2num"><b><u>+91-9177300538</u></b></string>
    <string name="techno_det">
        Research is the first step towards unearthing the unknown.It is an investment in the
        growth of future technologies and applications.Techno.docx brings a platform for all
        budding researchers to showcase their newest ideas to the world.Present your original
        research to a panel of distinguished judges and initiate a change in the industry.
    </string>
    <string name="auto_event">AUTOBOT</string>
    <string name="auto1">CHAITANYA</string>
    <string name="auto1num"><b><u>+91-9167313246</u></b> </string>
    <string name="auto2">PUSHKAR</string>
    <string name="auto2num"><b><u>+91-7756881415</u></b></string>
    <string name="auto_det">
        Design and build your own robots which can autonomously navigate
        through a labyrinth of obstacles and figure out the shortest and simplest path!
    </string>
    <string name="mecha_event">MECHATRYST</string>
    <string name="mecha1">M. FARAZ</string>
    <string name="mecha1num"><b><u>+91-8830423995</u></b></string>
    <string name="mecha2">HARENDER</string>
    <string name="mecha2num"><b><u>+91-7620795792</u></b></string>
    <string name="mecha3">M. SAMI</string>
    <string name="mecha3num"><b><u>+91-9561484281</u></b></string>
    <string name="mecha_det">
        Experience the thrill of racing in this ultimate IC engine car racing event. The revving of
        the engine, the obstacles on the path and the roar of victory are enough to give you an
        adrenaline rush. Be a part of this enthralling journey as high speed cars compete against
        each other to find their way to glory. Let the race begin!
    </string>
    <string name="savio_event">ROBO SAVIOUR</string>
    <string name="savio1">ANKIT</string>
    <string name="savio1num"><b><u>+91-9576455154</u></b></string>
    <string name="savio2">ROHIT</string>
    <string name="savio2num"><b><u>+91-8412961951</u></b></string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="college_name">Institution Name</string>
    <string name="email_id">Email Id</string>
    <string name="year">Select Year</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="talks">Talks</string>
    <string name="guest_lectures">Guest Lectures</string>
    <string name="inaugration">Inauguration</string>
</resources>