<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.developer.kartikraut.axis.LoginSignup.Signup">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/reg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/reg_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_username"
        android:drawableLeft="@drawable/ic_action_username"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/reg_lastname"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:layout_below="@id/reg_name"
        android:layout_centerHorizontal="true"
        android:background="#11000000"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_action_username"
        android:drawableStart="@drawable/ic_action_username"
        android:hint="@string/last_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:layout_alignLeft="@+id/reg_lastname"
        android:layout_alignStart="@+id/reg_lastname"
        android:layout_below="@+id/reg_lastname"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_action_login_email"
        android:drawableLeft="@drawable/ic_action_login_email"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/reg_clg"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:layout_alignLeft="@+id/reg_email"
        android:layout_alignStart="@+id/reg_email"
        android:layout_below="@+id/reg_email"
        android:drawableStart="@drawable/ic_action_clg"
        android:drawableLeft="@drawable/ic_action_clg"
        android:layout_marginTop="15dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/college_name"
        android:inputType="textMultiLine" />

    <Spinner
        android:id="@+id/reg_year"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/reg_clg"
        android:layout_alignStart="@+id/reg_clg"
        android:layout_below="@+id/reg_clg"
        android:layout_marginTop="15dp"
        android:background="#11000000"
        android:prompt="@string/year"/>

    <EditText
        android:id="@+id/reg_contact"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/reg_year"
        android:layout_alignStart="@+id/reg_year"
        android:layout_below="@+id/reg_year"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_reg_contact"
        android:drawableStart="@drawable/ic_action_reg_contact"
        android:ems="10"
        android:hint="@string/contact_number"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:layout_alignLeft="@+id/reg_contact"
        android:layout_alignStart="@+id/reg_contact"
        android:layout_below="@+id/reg_contact"
        android:drawableStart="@drawable/ic_action_lock_open"
        android:drawableLeft="@drawable/ic_action_lock_open"
        android:layout_marginTop="15dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reg_con_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:layout_alignLeft="@+id/reg_password"
        android:layout_alignStart="@+id/reg_password"
        android:layout_below="@+id/reg_password"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_action_password"
        android:drawableLeft="@drawable/ic_action_password"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <android.support.v7.widget.CardView
        android:id="@+id/bn_reg"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/reg_con_password"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="#008080"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="20sp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_go_to_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="Go to login page"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@+id/bn_reg"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin10"
        android:visibility="invisible"/>

    </RelativeLayout>

</ScrollView>
