<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.developer.kartikraut.axis.LoginSignup.Login">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/axis_logo"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/reg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_below="@+id/bn_login"
        android:layout_marginTop="20dp"
        android:text="@string/new_user_register_here"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white">
    </TextView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/axis_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/axislogo2"
        android:layout_marginTop="65dp"/>

    <EditText
        android:id="@+id/login_name"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_action_login_email"
        android:drawableLeft="@drawable/ic_action_login_email"
        android:hint="Email Id" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/login_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_action_password"
        android:drawableLeft="@drawable/ic_action_password"
        android:hint="Password"
        android:textColor="@color/white"/>

    <android.support.v7.widget.CardView
        android:id="@+id/bn_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        app:cardBackgroundColor="#008080"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="20sp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
